@@ -110,7 +110,7 @@ Checklist for adding new bindings
 
 * Add the C code to src/ (follow the code style of existing bindings)
 * Add the required checks to src/discover.ml
-* Add the path to C bindings to _oasis CSources and run `OASIS setup`
+* Add the path to C bindings to _oasis CSources and run `oasis setup`
 * Add the OCaml code to src/extUnix.mlpp guarded with HAVE ... END
 * Add some tests to test/test.ml
 * Add note to CHANGES.txt
