@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: 67305ddf13f2c19b2a3eccd8fa6e2448)
+# DO NOT EDIT (digest: d6d5b613af8be0b761af97372aa94014)
 # Library extunix
 "src": include
 <src/*.ml{,i}>: oasis_library_extunix_ccopt
@@ -22,6 +22,7 @@
 "src/time.c": oasis_library_extunix_ccopt
 "src/pts.c": oasis_library_extunix_ccopt
 "src/execinfo.c": oasis_library_extunix_ccopt
+"src/malloc.c": oasis_library_extunix_ccopt
 <src/extunix.{cma,cmxa}>: stubs_extunix
 <src/*.ml{,i}>: pkg_unix
 "src/eventfd.c": pkg_unix
@@ -43,6 +44,7 @@
 "src/time.c": pkg_unix
 "src/pts.c": pkg_unix
 "src/execinfo.c": pkg_unix
+"src/malloc.c": pkg_unix
 # Executable test
 <test/test.{native,byte}>: use_extunix
 <test/test.{native,byte}>: pkg_unix
