@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 2544a1d4107b973a6114f5868dc6252e) *)
+(* DO NOT EDIT (digest: 126704b96b6eb070a8bf711e985e2c1f) *)
 (*
    Regenerated by OASIS v0.2.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5244,7 +5244,8 @@ let setup_t =
                            "mman.c";
                            "time.c";
                            "pts.c";
-                           "execinfo.c"
+                           "execinfo.c";
+                           "malloc.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
